plotting pedigrees kinda works - selection of pedigrees is currently limited to one cluster only.

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,23 @@ h1, h2, h3, h4 { font-weight: 400; }
   transition-delay: 0;
 }
 
+#pedigree {
+  /* Appearance */
+  background-color: white;
+  padding: 20px 35px 20px 35px;
+  cursor: move;
+  /* Fade out while not hovering */
+  opacity: 0.2;
+  zoom: 0.9;
+  transition: opacity 500ms 100ms;
+}
+#pedigree:hover {
+  /* Fade in while hovering */
+  opacity: 0.95;
+  transition-delay: 0;
+}
+
+
 /* Position and style citation */
 #cite {
   position: absolute;
